update login.html / 메인으로 가는 경로 변경

--- a/WebContent/member/login.html
+++ b/WebContent/member/login.html
@@ -72,7 +72,7 @@ function chkNull(){
 				alert("아이디와 비밀번호가 일치하지 않습니다.");
 				return;
 			} else {
-				location.href="main";
+				location.href="/rgrg_user/rgrg/main/main";
 			}//end else
 		}//success
 	});//ajax
