수정 : main, common_header

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,8 +4,12 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
+<script type="text/javascript">
+	location.href="rgrg/main/main"
+</script>
+
 <body>
 <!-- user index -->
-index
+
 </body>
 </html>
