--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <script type="text/javascript">
-	location.href="rgrg/main/main"
+	location.href="/main.do"
 </script>
 
 <body>
