--- a/WebContent/member/login.html
+++ b/WebContent/member/login.html
@@ -6,19 +6,21 @@
 <meta name="google-signin-client_id" content="393175765493-5uqkkubl0sgc92q6cjced49oalplj70r.apps.googleusercontent.com">
 <title>Co-doing</title>
 <style type="text/css">
-#containerTitle{ text-align: center; font-size: 5rem; font-weight: bold; margin-top: 4rem }
-#containerContent{ margin-top: 5rem }
+#containerTitle{ text-align: center; font-size: 4.2rem !important; font-weight: bold; margin-top: 4rem }
+#containerContent{ margin-top: 5rem !important }
 #findId, #findPass{ color: #666; font-size: 1.3rem }
 #idDiv{ width: 44rem }
-.mb-3{ margin-top: 1rem; margin-bottom: 1rem!important; }
+.mb-3{ margin-top: 1.3rem !important; margin-bottom: 1rem!important; }
 .form-control{ width: 40rem; margin-right: 3rem; margin-left: 2rem; margin-bottom: 0.2rem; }
-.form-control{ height: 4.7rem; font-size: 1.5rem; display: block; padding: 1.5rem; font-weight: 400; line-height: 1.5; color: #495057; background-color: #fff; background-clip: padding-box; border: 1px solid #ced4da; border-radius: .25rem; transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out }
-#buttons{ margin:0 auto; margin-top: 2rem; width: 40rem }
-.btn-secondary{ width: 40rem; height: 4.5rem; font-size: 1.5rem !important; color: #fff; border-color: #6c757d; }
+.form-control{ height: 4.7rem; font-size: 1.4rem; display: block; padding: 1.5rem; font-weight: 400; line-height: 1.5; color: #495057; background-color: #fff; background-clip: padding-box; border: 1px solid #ced4da; border-radius: .25rem; transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out }
+#buttons{ margin:0 auto; margin-top: 4rem !important; width: 45rem !important }
+.btn-secondary{ width: 40rem; height: 4.5rem; font-size: 1.5rem !important; color: #fff; border-color: #6c757d; margin-left: 2.1rem !important; margin-top: 0.7rem; cursor: pointer; }
 .btn { display: inline-block; font-weight: 400; text-align: center; vertical-align: middle; user-select: none; border: 1px solid transparent; padding: .375rem .75rem; line-height: 1.5; border-radius: .25rem; transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out; }
-#loginBtn{ background-color: #000000 }
-#findDiv{ text-align: right; margin-top: 1rem; margin-right: 2rem; margin-bottom: 3rem }
-#joinDiv{ text-align: center; margin-top: 5rem; margin-bottom: 10rem }
+#loginBtn{ background-color: #000000; width: 40rem }
+#kakaoBtn{ width: 40rem; background-image: url('../images/kakao_login_medium_wide.png'); background-repeat: no-repeat; background-size : inherit; background-position: center; background-color: #FEE500 }
+#googleBtn{ width: 40rem; margin-top: 1rem; margin-left: 2.1rem }
+#findDiv{ text-align: right; margin-top: 1.3rem; margin-right: 2rem; margin-bottom: 3rem }
+#joinDiv{ text-align: center; margin-top: 5rem; margin-bottom: 10rem; width: 45rem }
 #joinLabel{ font-size: 1.3rem; color: #666 }
 #joinBtn{ font-size: 1.3rem; color: #333; text-decoration: underline; font-weight: bold; }
 </style>
@@ -141,8 +143,8 @@ function onSignIn(googleUser) {
 			<div id="loginDiv">
 				<div id="buttons">
 				  <button type="button" class="btn btn-secondary" id="loginBtn">로그인</button>
-				  <button type="button" class="btn btn-secondary" id="kakaoBtn" onclick="kakaoLogin();">카카오 로그인</button>
-				  <div class="g-signin2" data-onsuccess="onSignIn" id="googleBtn"></div>
+				  <button type="button" class="btn btn-secondary" id="kakaoBtn" onclick="kakaoLogin();"></button>
+				  <div class="g-signin2" data-width="400" data-height="40" data-longtitle="true" data-onsuccess="onSignIn" id="googleBtn"></div>
 				</div>
         	</div>
 			<div id="joinDiv">
