수정 : 블로그 포스트 댓글수정 css, 로그인 시 자동완성 기능 제거

--- a/WebContent/member/login.html
+++ b/WebContent/member/login.html
@@ -127,7 +127,7 @@ function onSignIn(googleUser) {
 			<form id="loginForm" action="/login.do" method="POST">
 			<div id="modalIdDiv">
 				<div class="input-group mb-3">
-				  <input type="text" id="id" name="id" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="아이디">
+				  <input type="text" id="id" name="id" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="아이디" autocomplete="off">
 				</div>		
 			</div>		
 			<div id="modalPassDiv">
